syntax = "proto3";

option go_package = "github.com/lreimer/jotb-workshop/grpc-beer-gateway/proto";

import "google/protobuf/empty.proto";

package beer;

service BeerService {
    rpc AllBeers (google.protobuf.Empty) returns (GetBeersResponse) {}
    rpc GetBeer (GetBeerRequest) returns (GetBeerResponse) {}
    rpc CreateBeer (CreateBeerRequest) returns (google.protobuf.Empty) {}
    rpc UpdateBeer (UpdateBeerRequest) returns (google.protobuf.Empty) {}
    rpc DeleteBeer (DeleteBeerRequest) returns (google.protobuf.Empty) {}
}

message Beer {
    string asin = 1;
    string name = 2;
    string brand = 3;
    string country = 4;
    float alcohol = 5;
    enum BeerType{
        IndianPaleAle = 0;
        SessionIpa = 1;
	    Lager = 2;
    }
    BeerType type = 6;
}

message GetBeersResponse {
    repeated Beer beers = 1;
}

message GetBeerRequest {
    string asin = 1;
}

message GetBeerResponse {
    Beer beer = 1;
}

message CreateBeerRequest {
    Beer beer = 1;
}

message UpdateBeerRequest {
    string asin = 1;
    Beer beer = 2;
}

message DeleteBeerRequest {
    string asin = 1;
}